css/style.css
#hello {
	color: red;
}

.app-content-list {
	width: 30%;
	height: 100%;
	overflow-x: hidden;
	overflow-y: auto;
	border-right: 1px solid #eee;
}

.app-content-detail {
	position: absolute;
	top: 0;
	right: 0;
	width: 70%;
	height: 100%;
	overflow-y: auto;
	overflow-x: hidden;
}

/* ------------------------------------------------- */

#add_form {
	padding: 5px;
}

#add_url {
	width: 100%;
	height: 35px;
	padding: 5px;
}

#add_button {
	width: 100%;
	height: 30px;
	padding: 5px;
}

/* ------------------------------------------------- */

.paper-item {
	transition: background-color 0.3s ease;
	padding: 5px;
	border-bottom: 1px #eee solid;
	cursor: pointer;
}

.active-paper {
	background-color: #eee;
}

.paper-item:hover {
	background-color: #eee;
	cursor: pointer;
}

.paper-item-info {
	color: #7a7a7a;
	padding-top: 3px;
	padding-bottom: 3px;
	cursor: pointer;
}

.paper-item-title {
	font-size: 16px;
	cursor: pointer;
}

.paper-item-description {
	cursor: pointer;
}

/* ------------------------------------------------- */

.app-content-detail {
	margin: auto;
	background: #fff;
	line-height: 1.555;
	text-align: justify;
	padding: 2em;
	font-size: 1.3rem;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-moz-font-feature-settings: "liga" on;
}

/* Typography
-------------------------------------------------------- */
.app-content-detail,
.app-content-detail p {
	font-family: "Tiempos", "Merriweather", "Freight Text", Palatino, Times, serif !important;
	line-height: 1.58;
	letter-spacing: -0.003em;
	color: rgba(0, 0, 0, .8);
}

.app-content-detail a,
.app-content-detail a:link,
.app-content-detail a:visited,
.app-content-detail a:active {
	color: #404247;
	text-decoration: none;
	text-shadow: 1px 1px 0 #fff, -1px 1px 0 #fff, 2px 0 0 #fff, -2px 0 0 #fff;
	box-shadow: inset 0 -1px 0 0 #fff, inset 0 -2px 0 0 #404247;
}

.app-content-detail h1,
.app-content-detail h2,
.app-content-detail h3,
.app-content-detail h4,
.app-content-detail h5,
.app-content-detail h6 {
	font-family: "Tiempos", "Kievit", "Proxima Nova", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-weight: 700 !important;
	font-style: normal;
	line-height: 1.15;
	letter-spacing: -0.02em;
}

.app-content-detail p {
	margin-bottom: 1.3em;
	font-weight: 400;
	font-style: normal;
	font-size: 18px;
	line-height: 32px;
	color: #404247;
	overflow: visible;
}

a:hover {
	text-decoration: none;
}

.app-content-detail h1,
.app-content-detail h2,
.app-content-detail h3,
.app-content-detail h4 {
	margin: 1.414em 0 0.5em;
	font-weight: inherit;
	line-height: 1.2;
}

.app-content-detail h1 {
	font-size: 40px;
	line-height: 48px;
	color: #101010;
	margin-top: 21px;
}

.app-content-detail h1:first-child {
	margin-top: 80px;
}

.app-content-detail h2 {
	font-size: 36px;
	line-height: 40px;
	color: #202123;
}

.app-content-detail h2:first-child {
	margin-top: 40px;
}

.app-content-detail h3 {
	font-size: 24px;
	line-height: 32px;
	color: #202123;
}

.app-content-detail h4,
.app-content-detail h5,
.app-content-detail h6 {
	font-family: "Kievit", "Proxima Nova", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 21px;
	line-height: 32px;
	color: #a5a7ae;
	font-weight: 400;
}

.app-content-detail small,
.app-content-detail .font_small {
	font-size: 0.707em;
}

.app-content-detail p {
	margin-top: 0;
	-webkit-hypens: auto;
	-moz-hypens: auto;
	hyphens: auto;
}

.app-content-detail ul {
	list-style: none;
	padding-left: 1.2em;
	font-weight: 400;
	font-style: normal;
	font-size: 21px;
}

.app-content-detail ul > li:before {
	font-size: 16.8px;
	padding-top: 4px;
	padding-right: 15px;
	content: "*";
	position: absolute;
	display: inline-block;
	box-sizing: border-box;
	width: 58px;
	margin-left: -58px;
	text-align: right;
}

.app-content-detail ol {
	padding-left: 1.2em;
}

.app-content-detail blockquote {
	margin-left: 1em;
	padding-left: 1em;
	border-left: 1px solid #ddd;
	font-style: normal;
	line-height: 1.15;
	letter-spacing: -0.02em;
	font-weight: 400;
	font-size: 21px;
}

.app-content-detail blockquote p {
	font-style: normal;
	margin-bottom: 0;
}

.app-content-detail code,
.app-content-detail pre {
	font-family: "Consolas", "Menlo", "Monaco", monospace, serif;
	font-size: .9em;
	background: white;
}

.app-content-detail pre.md-fences {
	margin-left: 1em;
	padding-left: 1em;
	border: 1px solid #ddd;
	padding-bottom: 8px;
	padding-top: 6px;
	margin-bottom: 1.5em;
}

.app-content-detail a {
	color: #2484c1;
	text-decoration: none;
}

.app-content-detail a img {
	border: none;
}

.app-content-detail h1 a,
.app-content-detail h1 a:hover {
	color: #333;
	text-decoration: none;
}

.app-content-detail hr {
	color: #ddd;
	height: 1px;
	margin: 2em 0;
	border-top: solid 1px #ddd;
	border-bottom: none;
	border-left: 0;
	border-right: 0;
}

.app-content-detail table {
	margin-bottom: 1.333333rem;
}

.app-content-detail table th,
.app-content-detail table td {
	padding: 8px;
	line-height: 1.333333rem;
	vertical-align: top;
	border-top: 1px solid #ddd;
}

.app-content-detail table th {
	font-weight: bold;
}

.app-content-detail table thead th {
	vertical-align: bottom;
}

.app-content-detail table caption + thead tr:first-child th,
.app-content-detail table caption + thead tr:first-child td,
.app-content-detail table colgroup + thead tr:first-child th,
.app-content-detail table colgroup + thead tr:first-child td,
.app-content-detail table thead:first-child tr:first-child th,
.app-content-detail table thead:first-child tr:first-child td {
	border-top: 0;
}

.app-content-detail table tbody + tbody {
	border-top: 2px solid #ddd;
}

